examples/kubeflow-mlops/kubeflow-manifests/upstream/common/istio-1-9/istio-install/base/gateway_authorizationpolicy.yaml
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
spec:
  action: ALLOW
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - {}
